Replace paths.get to path.of