@@ -26,7 +26,6 @@ package org.eluder.coveralls.maven.plugin.util;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -96,33 +95,33 @@ public class CoverageParsersFactory {
         ExistingFiles sagaFiles = ExistingFiles.create(sagaReports);
         ExistingFiles cloverFiles = ExistingFiles.create(cloverReports);
         for (MavenProject p : projects) {
-            Path reportingDirectory = Paths.get(p.getModel().getReporting().getOutputDirectory());
-            Path buildDirectory = Paths.get(p.getBuild().getDirectory());
+            Path reportingDirectory = Path.of(p.getModel().getReporting().getOutputDirectory());
+            Path buildDirectory = Path.of(p.getBuild().getDirectory());
 
-            jacocoFiles.add(Paths.get(reportingDirectory.toString(), JACOCO_PREFIX + JACOCO_FILE).toFile());
-            jacocoFiles.add(Paths.get(reportingDirectory.toString(), JACOCO_IT_PREFIX + JACOCO_FILE).toFile());
-            coberturaFiles.add(Paths.get(reportingDirectory.toString(), COBERTURA_PREFIX + COBERTURA_FILE).toFile());
-            sagaFiles.add(Paths.get(buildDirectory.toString(), SAGA_PREFIX + SAGA_FILE).toFile());
-            cloverFiles.add(Paths.get(reportingDirectory.toString(), CLOVER_PREFIX + CLOVER_FILE).toFile());
+            jacocoFiles.add(Path.of(reportingDirectory.toString(), JACOCO_PREFIX + JACOCO_FILE).toFile());
+            jacocoFiles.add(Path.of(reportingDirectory.toString(), JACOCO_IT_PREFIX + JACOCO_FILE).toFile());
+            coberturaFiles.add(Path.of(reportingDirectory.toString(), COBERTURA_PREFIX + COBERTURA_FILE).toFile());
+            sagaFiles.add(Path.of(buildDirectory.toString(), SAGA_PREFIX + SAGA_FILE).toFile());
+            cloverFiles.add(Path.of(reportingDirectory.toString(), CLOVER_PREFIX + CLOVER_FILE).toFile());
 
             if (relativeReportDirs != null) {
                 for (String relativeReportPath : relativeReportDirs) {
                     Path relativeReportingDirectory = reportingDirectory;
                     Path relativeBuildDirectory = buildDirectory;
                     if (!relativeReportPath.isEmpty() && !File.separator.equals(relativeReportPath)) {
-                        relativeReportingDirectory = Paths.get(reportingDirectory.toString(),
+                        relativeReportingDirectory = Path.of(reportingDirectory.toString(),
                                 relativeReportPath.toString());
-                        relativeBuildDirectory = Paths.get(buildDirectory.toString(), relativeReportPath.toString());
+                        relativeBuildDirectory = Path.of(buildDirectory.toString(), relativeReportPath.toString());
                     }
 
-                    jacocoFiles.add(Paths.get(relativeReportingDirectory.toString(), JACOCO_FILE).toFile());
-                    jacocoFiles.add(Paths.get(relativeBuildDirectory.toString(), JACOCO_FILE).toFile());
-                    coberturaFiles.add(Paths.get(relativeReportingDirectory.toString(), COBERTURA_FILE).toFile());
-                    coberturaFiles.add(Paths.get(relativeBuildDirectory.toString(), COBERTURA_FILE).toFile());
-                    sagaFiles.add(Paths.get(relativeReportingDirectory.toString(), SAGA_FILE).toFile());
-                    sagaFiles.add(Paths.get(relativeBuildDirectory.toString(), SAGA_FILE).toFile());
-                    cloverFiles.add(Paths.get(relativeReportingDirectory.toString(), CLOVER_FILE).toFile());
-                    cloverFiles.add(Paths.get(relativeBuildDirectory.toString(), CLOVER_FILE).toFile());
+                    jacocoFiles.add(Path.of(relativeReportingDirectory.toString(), JACOCO_FILE).toFile());
+                    jacocoFiles.add(Path.of(relativeBuildDirectory.toString(), JACOCO_FILE).toFile());
+                    coberturaFiles.add(Path.of(relativeReportingDirectory.toString(), COBERTURA_FILE).toFile());
+                    coberturaFiles.add(Path.of(relativeBuildDirectory.toString(), COBERTURA_FILE).toFile());
+                    sagaFiles.add(Path.of(relativeReportingDirectory.toString(), SAGA_FILE).toFile());
+                    sagaFiles.add(Path.of(relativeBuildDirectory.toString(), SAGA_FILE).toFile());
+                    cloverFiles.add(Path.of(relativeReportingDirectory.toString(), CLOVER_FILE).toFile());
+                    cloverFiles.add(Path.of(relativeBuildDirectory.toString(), CLOVER_FILE).toFile());
                 }
             }
         }
